[package]
name = "style"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
description = "Will be a lib for processing css styles"
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
style-shared = { version = "0.1", path = "shared" }
style-proc = { version = "0.1", path = "proc" }

[features]
bumpalo = ["style-shared/bumpalo", "style-proc/bumpalo"]

[workspace]
members = [".", "proc", "shared", "scripts"]

[workspace.package]
license = "MIT/Apache-2.0"
edition = "2021"
